--- a/src/classes/TaskListController.cls
+++ b/src/classes/TaskListController.cls
@@ -1,13 +1,13 @@
-public with sharing class TaskListController {
+public class TaskListController {
 	@AuraEnabled
-	public static List<Object> getAllTasks() {
-		List<Object> ltask = [SELECT Id, Name, Description__c, Type__c, Points__c, Contact__c FROM HTask__c];
+	public static List<HTask__c> getAllTasks() {
+		List<HTask__c> ltask = [SELECT Id, Name, Description__c, Type__c, Points__c, Contact__c FROM HTask__c];
 		return ltask;
 	}
 
   @AuraEnabled
-  public static List<Object> getAllUncompletedTask(){
-	List<Object> ltask = [SELECT Id, Name, Description__c, Type__c, Points__c, Contact__c
+  public static List<HTask__c> getAllUncompletedTask(){
+	List<HTask__c> ltask = [SELECT Id, Name, Description__c, Type__c, Points__c, Contact__c
 												FROM HTask__c
 												WHERE Status__c <> 'Completed'];
 	return ltask;
