--- a/src/classes/ResetTaskStatusBatch.cls
+++ b/src/classes/ResetTaskStatusBatch.cls
@@ -1,16 +1,10 @@
 global class ResetTaskStatusBatch implements Database.Batchable<sObject> {
 
-	String query;
-
-	global ResetTaskStatusBatch() {
-
-	}
-
 	global Database.QueryLocator start(Database.BatchableContext BC) {
-		return Database.getQueryLocator('SELECT Id'
-		                                + 'FROM HTask__c'
-		                                + 'WHERE Status__c <> \'New\''
-		                                + 'AND Type__c <> \'TO-DO\'');
+		return Database.getQueryLocator([SELECT Id
+																		FROM HTask__c
+																		WHERE Status__c <> 'New'
+																		AND Type__c <> 'TO-DO']);
 	}
 
  	global void execute(Database.BatchableContext BC, List<HTask__c> scope) {
